# workflow_templates

./: .env.example  .gitignore  .probe-marker  .tinaignore  1212  AGENTS.md  BUILD_REPORT.md  CLAUDE.md  COMPATIBILITY_ANALYSIS.md  IMPLEMENTATION_SUCCESS.md  PACKAGING_SYSTEM_COMPLETE_GUIDE.md  PACKAGING_SYSTEM_GUIDE.md  POC_RESULTS.md  POC_SUMMARY.md  PR_DESCRIPTION.md  QUICK_REFERENCE.md  README.md  README_FOR_PR.md  TODO.md  WORKSTREAM.md  admin.html  blueprints_bundles.json  bundles.json  comments-round-2-followup.md  comments-round-2.md  dictionary.dic  model_analysis_report.md  nx.json  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  run_full_validation.sh  server.js  static-template-blogs-plan.md  template-site-workstreams.md  test_dist_structure.py  vercel.json  vite-bundling-proposal-analysis.md  vite.config.js  (+3 more)
.claude/: settings.json  settings.local.json
.github/: .spellcheck-i18n.yml  .spellcheck-workflows.yml  .spellcheck.yml  .wordlist.txt  extract_workflow_text.py  maintainers.json  pypi-packages.json
admin/: .env.example  README.md  nuxt.config.ts  package-lock.json  package.json  vitest.config.ts
archived/: api_openai_sora_video.json  archived_i18n.json  index.ar.json  index.es.json  index.fa.json  index.fr.json  index.ja.json  index.json  index.ko.json  index.mcp.json  index.pt-BR.json  index.ru.json  index.tr.json  index.zh-TW.json  index.zh.json  video_ltx2_i2v_distilled.json
blueprints/: canny_to_image_z_image_turbo.json  controlnet_qwen_image_instantx_union.json  controlnet_z_image_turbo.json  depth_to_video_ltx_2_0.json  distributions.json  image_edit_chrono.json  image_edit_flux_2_dev.json  image_edit_qwen.json  image_edit_qwen_2509.json  image_edit_qwen_2511.json  image_inpainting_onereward.json  image_outpainting_qwen_image.json  image_to_depth_map_lotus.json  image_to_model_hunyuan3d_2_1.json  image_to_video_wan_2_2_fun_camera.json  image_upscale_z_image_turbo.json  index.json  index.schema.json  local_depth_to_video_ltx_2_0.json  local_image_edit_flux_2_klein_4b.json  local_image_edit_qwen_2511.json  local_image_to_layers_qwen_image_layered.json  local_image_to_model_hunyuan3d_2_1.json  local_image_to_video_wan_2_2.json  local_image_upscale_z_image_turbo.json  local_pose_to_video_ltx_2_0.json  local_text_to_audio_ace_step_1_5.json  local_text_to_image_z_image_turbo.json  local_video_inpaint_wan2_1_vace.json  multi_image_edit_flux_2_klein_4b_distilled.json  pose_to_image_z_image_turbo.json  pose_to_video_ltx_2_0.json  text_to_audio_ace_step_1_5.json  text_to_image_flux_1_krea_dev.json  text_to_image_flux_2_dev.json  text_to_image_flux_2_klein_4b.json  text_to_image_flux_2_klein_4b_distilled.json  text_to_image_flux_2_klein_9b_distilled.json  text_to_image_netayume_lumina.json  text_to_image_ovis.json  (+10 more)
comfyui_workflow_templates/: __init__.py
docs/: ARCHIVING_TEMPLATES.md  BLUEPRINTS.md  CREATORS.md  I18N_GUIDE.md  PUBLISHING.md  ROADMAP.md  SPEC.md  ai-content-generation-research.md  ai-content-generation-strategy.md  comfy-org-dns-records.bind  publishing-workflow-templates.md  reverse-proxy-adr.md  reverse-proxy-cutover-announcement.md  reverse-proxy-deployment-runbook.md  reverse-proxy-emergency-runbook.md  reverse-proxy-go-live-checklist.md  reverse-proxy-plan.md  template-site-design.md  template-site-integration.md
input/: input-aspect-ratio-converter  templates_mjm_image_to_3d.json
output/: api_kling_o3_image.json  templates_purz_animatediff_simple_weighted_ipadapters_looping_animation.json
scripts/: I18N_GUIDE.md  README.md  analyze_models.py  archive_templates.py  build.js  bump_versions.py  check_input_assets.py  check_links.py  check_third_party_nodes.py  ci_version_manager.py  generate_workflow_io.py  i18n.json  import_blueprints.py  list_pip_excluded.py  locale_index_files.py  models_capabilities.json  sync-mcp-index.py  sync_bundles.py  sync_custom_nodes.py  sync_data.py  sync_i18n.py  sync_template_translation_to_FE.py  sync_templates.py  tag_mappings.json  tag_mappings.json.backup  tina-hooks.js  upload_all_packages.sh  validate_multilang_index.py  validate_templates.py  whitelist.json
site/: .env.example  .gitignore  AGENTS.md  README.md  astro.config.mjs  creators.json  eslint.config.js  lighthouserc.json  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vercel.json  vitest.config.ts
templates/: 01_get_started_text_to_image.json  01_qwen_t2i_subgraphed.json  02_qwen_Image_edit_subgraphed.json  03_video_wan2_2_14B_i2v_subgraphed.json  04_hunyuan_3d_2.1_subgraphed.json  05_audio_ace_step_1_t2a_song_subgraphed.json  3d_hunyuan3d-v2.1.json  3d_moge_panorama_to_mesh.json  3d_moge_perspective_to_mesh.json  3d_triposplat_image_to_gaussian_splat.json  Image_capybara_v0_1_image_edit.json  Image_capybara_v0_1_text_to_image.json  Template-Animation_Trajectory_Control_Wan_ATI.json  ai-context.json  api_anthropic_claude.json  api_anthropic_claude_fable5.json  api_anthropic_claude_sonnet5.json  api_bfl_flux1_expand_image.json  api_bfl_flux_1_kontext_max_image.json  api_bfl_flux_1_kontext_multiple_images_input.json  api_bfl_flux_1_kontext_pro_image.json  api_bfl_flux_pro_t2i.json  api_flux2.json  (+428 more)
(+4978 files in other folders)
