[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui_workflow_templates"
version = "0.11.0"
description = "ComfyUI workflow templates package"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Comfy-Org"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "comfyui-workflow-templates-core==0.3.265",
    "comfyui-workflow-templates-json==0.1.0",
    "comfyui-workflow-templates-media-api==0.3.83",
    "comfyui-workflow-templates-media-video==0.3.100",
    "comfyui-workflow-templates-media-image==0.3.159",
    "comfyui-workflow-templates-media-other==0.3.228",
    "comfyui-workflow-templates-media-assets-01==0.1.0",
]

[project.optional-dependencies]
json = ["comfyui-workflow-templates-json==0.1.0"]
assets = ["comfyui-workflow-templates-media-assets-01==0.1.0"]
api = ["comfyui-workflow-templates-media-api==0.3.83"]
video = ["comfyui-workflow-templates-media-video==0.3.100"]
image = ["comfyui-workflow-templates-media-image==0.3.159"]
other = ["comfyui-workflow-templates-media-other==0.3.228"]
all = [
    "comfyui-workflow-templates-json==0.1.0",
    "comfyui-workflow-templates-media-assets-01==0.1.0",
    "comfyui-workflow-templates-media-api==0.3.83",
    "comfyui-workflow-templates-media-video==0.3.100",
    "comfyui-workflow-templates-media-image==0.3.159",
    "comfyui-workflow-templates-media-other==0.3.228",
]

[tool.setuptools.packages.find]
where = ["packages/meta/src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F"]
