[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui_workflow_templates"
version = "0.11.7"
description = "ComfyUI workflow templates package"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Comfy-Org"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "comfyui-workflow-templates-core==0.3.269",
    "comfyui-workflow-templates-json==0.1.3",
    "comfyui-workflow-templates-media-api==0.3.84",
    "comfyui-workflow-templates-media-video==0.3.101",
    "comfyui-workflow-templates-media-image==0.3.160",
    "comfyui-workflow-templates-media-other==0.3.229",
    "comfyui-workflow-templates-media-assets-01==0.1.1",
]

[project.optional-dependencies]
json = ["comfyui-workflow-templates-json==0.1.3"]
assets = ["comfyui-workflow-templates-media-assets-01==0.1.1"]
api = ["comfyui-workflow-templates-media-api==0.3.84"]
video = ["comfyui-workflow-templates-media-video==0.3.101"]
image = ["comfyui-workflow-templates-media-image==0.3.160"]
other = ["comfyui-workflow-templates-media-other==0.3.229"]
all = [
    "comfyui-workflow-templates-json==0.1.3",
    "comfyui-workflow-templates-media-assets-01==0.1.1",
    "comfyui-workflow-templates-media-api==0.3.84",
    "comfyui-workflow-templates-media-video==0.3.101",
    "comfyui-workflow-templates-media-image==0.3.160",
    "comfyui-workflow-templates-media-other==0.3.229",
]

[tool.setuptools.packages.find]
where = ["packages/meta/src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F"]
